# Research-Agent

./: CLAUDE.md  README.md  pyproject.toml
.meta/: project-health.json
docs/: ARCHITECTURE.md  PHASE_CHECKLISTS.md  PROGRESS.md
scripts/: demo.sh  setup.sh
src/: main.py
src/output/: __init__.py  bibtex.py  compiler.py  latex.py
src/output/templates/: article.tex  minimal.tex  report.tex
src/security/: __init__.py  latex.py  validation.py
src/utils/: __init__.py  circuit_breaker.py  metrics.py
src/workers/: __init__.py  arxiv.py  base.py  search.py  writer.py
tests/: test_config.py  test_output.py  test_security.py  test_workers.py
